# ubb-fmi-work

./: .gitignore  README.md
Analiza matematica/pb seminar0/: pb seminar0.layout
Arhitectura sistemelor de calcul/Laboratoare/LAB6/: pb1.asm
Arhitectura sistemelor de calcul/Laboratoare/LAB8/: tema.asm  tema.lst
Arhitectura sistemelor de calcul/Laboratoare/pb1/: pb 1.asm
CodBlanitzaCuGabiMircea/Class-Studenti/business/: service_materii.py  service_studenti.py
CodBlanitzaCuGabiMircea/Class-Studenti/domeniu/: nota.py
CodBlanitzaCuGabiMircea/Class-Studenti/infrastructura/: repo_materii.py  repo_studenti.py
CodBlanitzaCuGabiMircea/pythonProject - teme/validatoare/: validator_tema.py
CodBlanitzaCuGabiMircea/seminar3/validare/: validator_player.py
CodBlanitzaCuGabiMircea/seminar8/: main.py
CodBlanitzaCuGabiMircea/seminar8/infrastructure/: file_repo_ballaz.py
CodBlanitzaCuGabiMircea/seminar8/teste/: ballaz_teste.txt
Fundamentele programarii/Laboratoare/LAB13/: main.py
Fundamentele programarii/Laboratoare/LAB4-6/: Documentatie.docx  main.py  ~$cumentatie.docx
Fundamentele programarii/Laboratoare/LAB5/: main.py
Fundamentele programarii/Laboratoare/LAB7-9/: Documentatie.docx  main.py
Fundamentele programarii/Laboratoare/simulare/: main.py
Programare in C/Assigment 1/: pb2.c
Programare in C/Assigment 3/tema/: tema.layout
Semestrul I/ASC - Arhitectura sistemelor de calcul/LAB10/: pb2.lst
Semestrul I/ASC - Arhitectura sistemelor de calcul/LAB6/: pb1.lst
Semestrul I/ASC - Arhitectura sistemelor de calcul/pb suplimentara/: lab5.asm
Semestrul I/ASC - Arhitectura sistemelor de calcul/pb2/: pb2.asm
Semestrul I/Analiza matematica/pb seminar0/: main.cpp  pb seminar0.cbp  pb seminar0.depend
Semestrul I/Arhitectura sistemelor de calcul/LAB10/: pb1.asm  pb1.lst  pb2.asm
Semestrul I/Arhitectura sistemelor de calcul/pb1/: pb 1.lst
Semestrul I/CodBlanitzaCuGabiMircea/seminar3/: main.py
Semestrul I/CodBlanitzaCuGabiMircea/seminar8/: ballaz.txt
Semestrul I/FP - Fundamentele programarii/Practic FP/: test4.txt
Semestrul I/Fundamentele programarii/Practic FP/: examene.txt  main.py  test.txt  test2.txt
Semestrul I/Fundamentele programarii/Simulare/: date.txt  vanzari.txt
Semestrul I/Notite/: Deschidere blocnotes.onetoc2  FP.one
Semestrul I/Programare in C/Assigment 1/: pb6.c
Semestrul I/Programare in C/Assigment 2/: problema_1.c  problema_1_functions.c
Semestrul II/Algoritmica Grafurilor/AG_probleme/: AG_probleme.sln
Semestrul II/Algoritmica Grafurilor/EXAMEN1/: EXAMEN1.sln
Semestrul II/Algoritmica Grafurilor/LAB2/: cerinte_laborator_2.txt
Semestrul II/Algoritmica Grafurilor/LAB2/Problema1_MOORE/Problema1_MOORE/: CMakeLists.txt  Problema1_MOORE.cpp
Semestrul II/Algoritmica Grafurilor/LAB2/Problema3_Labirinturi/Problema2_Labirinturi/: CMakeLists.txt  Problema2_Labirinturi.cpp
Semestrul II/Algoritmica Grafurilor/LAB2/Problema5_DFSvisit/Problema5_DFSvisit/: CMakeLists.txt  Problema5_DFSvisit.cpp
Semestrul II/Algoritmica Grafurilor/LAB2/problema2_DFS/problema2/: CMakeLists.txt  problema2.cpp
Semestrul II/Algoritmica Grafurilor/LAB3/p1/p1/: CMakeLists.txt  p1.cpp
Semestrul II/OOP - Programare orientata pe obiect/LABORATOARE/LAB2/LAB2/: CMakeLists.txt  CustomSort.c  CustomSort.h  LAB2.c  MyList.c  MyList.h  Tranzactie.c  Tranzactie.h  my_utils.c  service.c  service.h
Semestrul III/DB/: Clinica.sql  Politie.sql  functii utile.txt  practicDB.sql
Semestrul III/MAP/Laboratoare/: LAB5.sql
Semestrul III/PLF/: LAB1.pl  LAB2.pl~  Test.pl  Test.pl~  lab1.pl~  lab1b.pl~
Semestrul III/PLF/LISP/: cmd rulare.txt  lab1.lisp  lab2.lisp  lab3.lisp  practic.lisp
Semestrul III/PLF/PROLOG/: LAB1B.pl  LAB2.pl  LAB3.pl~  aranjamente.pl  aranjamente.pl~  combinari.pl  combinari.pl~  exCursCombSuma.pl  exCursCombSuma.pl~  insereaza.pl  insereaza.pl~  permutari.pl
Semestrul III/PLF/Practice/: P1-2.pl
Semestrul III/PS/LAB1/: main.py
Semestrul III/PS/LAB2/: main.py
Semestrul III/PS/LAB2-2/: main.py
Semestrul III/PS/LAB3/: main.py
Semestrul III/PS/LAB3-ACASA/: main.py
Semestrul III/PS/LAB4/: main.py
Semestrul III/PS/LAB4-ACASA/: main.py
Semestrul III/PS/LAB5/: main.py  t
Semestrul III/PS/LAB6/: main.py
Semestrul III/RETELE/: lab8.pkt  proiect-sem - Copy.pkt  proiect-sem - fara NAT.pkt  proiect-sem.pkt
Semestrul IV/AI/LAB10/: dolphins.ipynb  football.ipynb  load_network.ipynb
Semestrul IV/AI/LAB6/: prob2-l6.ipynb  prob3-L6.ipynb
Semestrul IV/AI/LAB9/: features_extract.ipynb
Semestrul IV/AI/lab4-bun/: main.py
Semestrul IV/AI/lab4-probleme/: lab3.ipynb  main.py
Semestrul IV/MPP/LAB2/: Diagrama_project.mdj
Semestrul IV/SGBD/Examen practic/: DirtyReads1.sql  DirtyReads2.sql  db.sql  index.sql
Semestrul IV/SGBD/LAB1/: SGBDLAB.sln
Semestrul IV/SGBD/LAB3/: pb1.sql  pb2.sql
Semestrul IV/Web/LAB1/: index.html
Semestrul IV/Web/LAB1-HTML4/: index.html
Semestrul V/LTFC/L3/: cod.txt  (+1 more)
Semestrul V/LTFC/Tema 3/: CMakeLists.txt
Semestrul V/PDM/: package-lock.json  package.json
SemestrulV/LTFC/Tema 4/: CMakeLists.txt  README.md  input.txt  lex-analizer.l  parser.tab.c  parser.y
SemestrulV/PPD/LAB3/: CMakeLists.txt  Laborator3.docx
SemestrulV/PPD/rez-test2/: CMakeLists.txt  generate_numbers22.cpp  main.cpp
SemestrulV/PPD/rezolvare-model-test/: CMakeLists.txt  generate_numbers.cpp  main.cpp
(+1366 files in other folders)
